# shoppingbasket

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: products.json  promotions.json
docs/shoppingbasket/: basket.html  catalog.html  cli.html  data.html  index.html  product.html  promotion.html
src/shoppingbasket/: __init__.py  _utils.py  basket.py  catalog.py  cli.py  data.py  product.py  promotion.py
tests/: __init__.py
tests/test_shoppingbasket/: __init__.py  conftest.py  test__init__.py  test__utils.py  test_basket.py  test_catalog.py  test_cli.py  test_product.py  test_promotion.py
