[tool.poetry]
name = "shoppingbasket"
version = "0.1.0"
description = "shoppingbasket is a Python library with functionality for calculating the price of baskets of products, including functionality to account for product promotions."
authors = ["Jack Hilton <jackhilton8@hotmail.co.uk>"]
homepage = "https://github.com/Hilton184/shoppingbasket"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pdoc3 = "^0.10.0"

[tool.poetry.scripts]
ShoppingBasket = "shoppingbasket.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
